autoscheduler/frontend/src/components/SchedulingPage/Schedule/ScheduleCard/ScheduleCard.css
.schedule-card {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    width: calc(100% - 4px);
    margin: 2px;
    color: white !important;
    position: absolute;
    border-radius: 4px;
    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
    box-sizing: border-box;
    z-index: 3;
}

.start-time, .end-time {
    color: black;
    background-color: white;
    border-width: 2px;
    border-style: solid;
    padding: 2px 4px;
    font-size: 0.8rem;
    position: absolute;
}

.start-time {
    border-radius: 4px 4px 0px 0px;
    top: 0px;
    transform: translateY(-100%);
}

.end-time {
    border-radius: 0px 0px 4px 4px;
    bottom: 0px;
    transform: translateY(100%);
}

.drag-handle {
    cursor: ns-resize;
    width: 100%;
    height: 8px;
    position: absolute;
}

.drag-handle-top {
    top: -5px;
}

.drag-handle-bot {
    bottom: -5px;
}

